# archive-studio

./: .gitignore  LICENSE  README.md  RELEASE.md  archive_studio.py  install-archive-studio-tauri.ps1  install-archive-studio.ps1
archive-studio-tauri/: README.md  build-tauri-windows.cmd  index.html  package-lock.json  package.json
archive-studio-tauri/scripts/: build_metadata_index.py
archive-studio-tauri/src/: main.jsx  styles.css
archive-studio-tauri/src-tauri/: Cargo.toml  tauri.conf.json
archive-studio-tauri/src-tauri/src/: lib.rs  main.rs
archive-studio-tauri/src/__tests__/: metadata.test.js
archive-studio-tauri/src/data/: metadata-index-report.json
