[package]
name = "archive-studio"
version = "0.2.0"
description = "Archive Studio"
authors = ["Rozie Naz"]
edition = "2021"

[lib]
name = "archive_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.34"
rfd = "0.15"
